fix navbar wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,3 @@
-/* nav style */
-.navbar-style {
-    padding-right: 2.5rem !important;
-    padding-left: 2.5rem !important;
-}
-/* end nav style */
-
 /* fonts */
 .Times-New-Roman-font {
     font-family: "Times New Roman", Times, serif;
